# deep-research-agent

./: .env.example  .gitignore  README.md  app.py  docker-compose.yml  main.py  pyproject.toml
const/: __init__.py  document.py  embed.py  prompt.py
core/: rag.py
db/: __init__.py  file.py  postgres.py  vector.py
markdown/: demo.md
model/: __init__.py  qa.py
pkg/: graph.py  react.py
test/: dummy.py  test_doc.py  test_rag.py  test_react.py
ui/: __init__.py  ui.py
util/: __init__.py  doc.py  env.py  llm.py  tool.py
